# x402layer

./: .gitignore  README.md  package-lock.json  package.json  turbo.json
.github/: dependabot.yml
contracts/: .gitignore  Cargo.toml  Odra.toml  README.md  build.rs  deployed-addresses.json  rust-toolchain.toml
contracts/.cargo/: config.toml
contracts/scripts/: call-contract.sh  deploy.sh
contracts/src/: kyx_registry.rs  lib.rs  settlement_vault.rs
demos/agent-app/: .env.example  README.md  casper-transfer.mjs  keyinfo.mjs  package.json  register.mjs  server.mjs
demos/agent-app/public/: app.js  index.html  styles.css
demos/mock-rwa-api/: README.md  server.js
demos/mock-rwa-api/data/: RE-NYC-001.json
demos/paid-api-provider/: .env.example  README.md  package.json  server.mjs
demos/paid-api-provider/data/: COMM-GOLD-1.json  CRED-SME-77.json  RE-LDN-014.json  RE-NYC-001.json
demos/paid-api-provider/public/: app.js  index.html  styles.css
demos/rwa-oracle-agent/: README.md  agent.mjs  package.json
services/dashboard/: .env.example  README.md  next.config.mjs  package.json  tailwind.config.ts
services/dashboard/app/: fonts.ts  globals.css  layout.tsx  page.tsx
services/dashboard/components/: AgentRegistration.tsx  AgentTransactions.tsx  Counter.tsx  CustomCursor.tsx  Nav.tsx  Placeholder.tsx  Reveal.tsx  Ticker.tsx  TransactionTable.tsx  TrustScoreCard.tsx  docs-content.tsx  docs.tsx  user-docs-content.tsx
services/facilitator/: .env.example  README.md  package.json  tsconfig.json
services/kyx-registry/: .env.example  package.json
(+56 files in other folders)
