[package]
name = "fourotwo-contracts"
version = "0.1.0"
edition = "2021"
authors = ["fourotwo"]
license = "MIT"
description = "fourotwo Casper smart contracts: KyxRegistry + SettlementVault (Odra)"

[dependencies]
odra = "2.8.1"

[dev-dependencies]
odra-test = "2.8.1"

[build-dependencies]
odra-build = "2.8.1"

# odra-build is also needed at runtime (not for wasm) by bin/build_schema.rs,
# which calls `odra_build::schema(..)` to emit the contract schema JSON.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2.8.1"

[lib]
# rlib is required for `cargo test` against the Odra MockVM backend.
# The wasm contract binaries are produced separately via `cargo odra build`.
crate-type = ["rlib"]
doctest = false

[[bin]]
name = "fourotwo_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "fourotwo_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[features]
default = []

[lints.rust]
# The `odra::module` macro and Odra's build script set these cfgs from the
# ODRA_MODULE / ODRA_BACKEND env vars. Declare them so they aren't flagged.
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(odra_module, values(any()))',
    'cfg(odra_backend, values(any()))',
] }

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
